--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <h1 style="backgroud-color:powderblue;">Hello World</h1>
+  <h1 style="background-color:powderblue;">Hello World</h1>
   <h3>chayapon somyana</h3>
   <h3>chonnikan suratwadee</h3>
   <h1>Give me Full Marks please</h1>
